metadata/force-app/main/default/objects/CustomName_Vfmsj__c/CustomName_Vfmsj__c.object-meta.xml
<CustomObject>
    <description>Description_aLNNn</description>
    <label>CustomLabel_nkwqc</label>
    <nameField>
        <label>CustomLabel_nkwqc</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_nkwqcs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>