metadata/force-app/main/default/objects/CustomName_Vfmsj__c/fields/CustomField_DsdzW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_DsdzW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqLHCZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>